img  burguers fix

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
         </h1>
         <div class="img-burgues">
           <div class="imgs">
-            <img src="/src/1.jpg" width="100px" height="100px" alt="" />
+            <img src="src/1.jpg" width="100px" height="100px" alt="" />
           </div>
           <div class="imgs">
-            <img src="/src/2.jpg" width="100px" height="100px" alt="" />
+            <img src="src/2.jpg" width="100px" height="100px" alt="" />
           </div>
           <div class="imgs">
-            <img src="/src/3.jpg" width="100px" height="100px" alt="" />
+            <img src="src/3.jpg" width="100px" height="100px" alt="" />
           </div>
           <div class="imgs">
-            <img src="/src/4.jpg" width="100px" height="100px" alt="" />
+            <img src="src/4.jpg" width="100px" height="100px" alt="" />
           </div>
           <div class="imgs">
-            <img src="/src/5.jpg" width="100px" height="100px" alt="" />
+            <img src="src/5.jpg" width="100px" height="100px" alt="" />
           </div>
           <div class="imgs">
-            <img src="/src/6.jpg" width="100px" height="100px" alt="" />
+            <img src="src/6.jpg" width="100px" height="100px" alt="" />
           </div>
         </div>
         <div class="txt-info">
